test pass 4 thread